Fri Mar  4 18:42:08 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename "enum gc_stat" to "enum gc_mode"
	  because there is a same name (no related) function gc_stat().

	  Also gc_stat_* are renamed to gc_mode_*,
	  gc_stat_transition() to gc_mode_transition(),
	  rb_objspace::flags::stat is renamed to rb_objspace::flags::mode.

	  Change rb_objspace::flags::mode from 2 bits to 3 bits because VC++
	  returns negative enum value with 2 bits.

	* gc.c (gc_mode): add a macro to access rb_objspace::flags::mode
	  with verification code (verification is enabled only on
	  RGENGC_CHECK_MODE > 0).

	* gc.c (gc_mode_set): same macro for setter.

Fri Mar  4 09:28:18 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.6.1.
	  Please see entries of 2.6.0 and 2.6.1 on
	  https://github.com/rubygems/rubygems/blob/master/History.txt
	  [fix GH-1270] Patch by @segiddins

Thu Mar  3 14:09:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (modifiable?, new_ostruct_member!, table!):
	  rename methods for internal use with suffixes and make private,
	  [ruby-core:71069] [Bug #11587]

Wed Mar  2 16:28:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (method_missing): call by found method entry and get
	  rid of searching the same method entry twice.

	* vm_eval.c (vm_call0_body): calling method_missing method is
	  method_missing().

Wed Mar  2 15:13:33 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed broken parser named XMLScanStreamParser.
	  It's not works with current Ruby version.
	  [fix GH-1271][ruby-core:59588][Bug #9369]
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.

Wed Mar  2 15:08:33 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed broken parser named XMLTreeParser.
	  Required gem of its parser didn't compile on newer Ruby versions.
	  [fix GH-1271][ruby-core:59590][Bug #9370]
	* lib/xmlrpc/config.rb: ditto.